--- a/research.html
+++ b/research.html
@@ -263,7 +263,7 @@ $(document).ready(function () {
       </ul>
       <ul class="nav navbar-nav navbar-right">
         <li>
-  <a href="mailto:danieltregeagle@gmail.com">
+  <a href="mailto:tregeagle@ncsu.edu">
     <span class="fa fa-envelope-o fa-lg"></span>
      
   </a>
@@ -295,24 +295,48 @@ sugarcane and the expansion of the Brazilian biofuel industry.</p>
 <div id="peer-reviewed-publications" class="section level2">
 <h2>Peer Reviewed Publications</h2>
 <div
+id="estimating-perennial-crop-supply-response-a-methodology-literature-review"
+class="section level3">
+<h3><a href="files/AGECON-MS2023160-For-Posting.pdf">Estimating
+Perennial Crop Supply Response: A Methodology Literature Review</a></h3>
+<p>(with Jonathon Siegle, Greg Astill, and Zoë Plakias) - Accepted at
+<em>Agricultural Economics</em>.</p>
+<p><em>Abstract</em>: Perennial crops are important both economically
+and as a component of a healthy and nutritious diet (e.g., many fruits
+and nuts). However, the study of perennial crop production and farmer
+response to output price changes (i.e., supply response) is complex
+thanks to the dynamic nature of investment and decision making in these
+industries. The body of literature relevant to perennial crop supply
+response is also small relative to that of annual commodity crops. In
+this article, we contribute the first literature review on perennial
+crop supply response modeling in more than 30 years. We catalog
+advancements in estimating perennial crop supply response and discuss
+the application of these methods and trade-offs economists should be
+aware of when using them. In addition, we highlight future modeling
+developments that may be valuable to the field, with the hope this
+research will encourage additional economic research on this interesting
+and important topic and in turn provide new insights for perennial crop
+producers and policymakers.</p>
+<p><br></p>
+</div>
+<div
 id="minimizing-the-costs-of-biorefinery-processing-by-managing-perennial-crop-age-the-case-of-brazilian-sugarcane"
 class="section level3">
-<h3><a href="files/TZ1.pdf">Minimizing the costs of biorefinery
-processing by managing perennial crop age: The case of Brazilian
-sugarcane</a></h3>
-<p>(with David Zilberman) - Accepted at <em>Journal of Agricultural and
-Applied Economics</em></p>
+<h3><a href="https://doi.org/10.1017/aae.2023.21">Minimizing the costs
+of biorefinery processing by managing perennial crop age: The case of
+Brazilian sugarcane</a></h3>
+<p>(with David Zilberman) - <em>Journal of Agricultural and Applied
+Economics</em>, 2023, 55(2), 376–398.</p>
 <p><em>Abstract</em>: We develop and analyze an unexplored mechanism to
 reduce biorefinery supply chain costs when the feedstock is a perennial
-crop: adjusting the age-structure, and hence yield, of the perennial
+crop: adjusting the age structure, and hence yield, of the perennial
 feedstock. The non-monotonicity of the age-yield function introduces a
-non-convexity to the cost-minimization problem. We show that, despite
+non-convexity to the cost minimization problem. We show that, despite
 this, the problem has a solution and present analytic and numeric
 comparative statics, finding that larger refineries are most likely to
-benefit from optimizing age-structure. The model is calibrated to the
-sugarcane industry in Brazil. The cost-reductions from optimizing age,
-compared to the observed regional average age, are less than one
-percent.</p>
+benefit from optimizing age structure. The model is calibrated to the
+sugarcane industry in Brazil. The cost reductions from optimizing age,
+compared to the observed regional average age, are less than 1%.</p>
 <p><br></p>
 </div>
 <div
@@ -322,7 +346,7 @@ class="section level3">
 href="https://doi.org/10.3390/horticulturae8040290">Willingness-to-Pay
 for Produce: A Meta-Regression Analysis Comparing the Stated Preferences
 of Producers and Consumers</a></h3>
-<p>(with Alice Kilduff) - <em>Horticulturae</em></p>
+<p>(with Alice Kilduff) - <em>Horticulturae</em> 2022, 8(4), 290.</p>
 <p><em>Abstract</em>: Willingness-to-pay (WTP) estimates help
 agribusinesses estimate whether a new product is likely to be
 profitable. For produce, new products, such as new fruit varieties, need
@@ -346,7 +370,7 @@ neonicotinoid regulation in California</a></h3>
 <p>(with Kevi Mace, Jessica Rudder, Rachael Goodhue, Tor Tolhurst,
 Hanlin Wei, Elizabeth Grafton-Cardwell, Ian Grettnberger, Houston
 Wilson, Robert Van Steenwyk, Frank Zalom, and John Steggall) -
-<em>Journal of Economic Entomology</em></p>
+<em>Journal of Economic Entomology</em>, 2022, 115(1), 10–25.</p>
 <p><em>Abstract</em>: Neonicotinoid insecticides are widely used in
 agriculture, including in many California specialty crops. With mounting
 evidence that these insecticides are harmful to bees, state and national
@@ -376,6 +400,28 @@ managing the target pests.</p>
 </div>
 <div id="working-papers" class="section level2">
 <h2>Working Papers</h2>
+<div
+id="developing-practical-measures-of-the-price-of-pesticide-resistance-a-flexible-computational-framework-with-global-sensitivity-analysis"
+class="section level3">
+<h3><a
+href="https://ageconsearch.umn.edu/record/335859/files/26188.pdf">Developing
+Practical Measures of the Price of Pesticide Resistance: A Flexible
+Computational Framework with Global Sensitivity Analysis</a></h3>
+<p>(with Chanheung Cho, Zachary Brown, and Kevin Gross)</p>
+<p><em>Abstract</em>: Pesticide resistance poses an increasing challenge
+for agricultural sustainability. Pesticide susceptibility is a
+depletable biological resource, but resistance management rarely
+quantifies marginal, forward-looking economic costs to users of
+depleting this resource. We use a generic stochastic bioeconomic model
+of pesticide resistance evolution in a crop pest population, stochastic
+dynamic programming, and global sensitivity analysis to analyze the
+‘marginal user costs’ of resistance. The most impactful parameters on
+these costs are population density dependence and pesticide prices.
+Least impactful is the fitness cost of resistance, which is noteworthy
+because of prior emphasis on this parameter in the resistance management
+literature.</p>
+<p><br></p>
+</div>
 <div id="optimal-management-of-orchards" class="section level3">
 <h3><a href="files/OptimalManagementOfOrchards_200909.pdf">Optimal
 Management of Orchards</a></h3>
@@ -404,7 +450,8 @@ survey</a> (with Zoë Plakias, link to AAEA poster)</li>
 <li>Measuring grower and market intermediary willingness-to-pay for
 improvements in cucurbit disease resistance (with Alice Kilduff)</li>
 <li>Exploring the impact of water technology choices on native plant
-sales in US nurseries (with Melinda Knuth)</li>
+sales in US nurseries (with Melinda Knuth, Alicia Rihn, Bridget Behe,
+Marco Palma, and Bryan Peterson)</li>
 <li>Improving impact measurement for specialty crop extension
 programs</li>
 <li>Strengthening and expanding muscadine markets (with Chris Gunter,
