Adding SHC and Labor projects

--- a/research.html
+++ b/research.html
@@ -452,13 +452,16 @@ improvements in cucurbit disease resistance (with Alice Kilduff)</li>
 <li>Exploring the impact of water technology choices on native plant
 sales in US nurseries (with Melinda Knuth, Alicia Rihn, Bridget Behe,
 Marco Palma, and Bryan Peterson)</li>
-<li>Improving impact measurement for specialty crop extension
-programs</li>
 <li>Strengthening and expanding muscadine markets (with Chris Gunter,
 Mark Hoffmann, Lynette Johnson, Penelope Perkins-Veazie and Craig
 Mauney)</li>
 <li>Updating the Southeastern Strawberry Production Guide (PD: Mark
 Hoffmann)</li>
+<li>U.S Consumers’ Perceptions on Agricultural Labor Supply (with
+Vitalis Othuon, Benjamin Campbell, and William Secor)</li>
+<li>Regionally Identified Heirloom Crops as a Viable Niche for Small
+Specialty Producers (with Ben Boyles, Diana Fossbrinck, David Lamie,
+Yefan Nian, and Michael Vassalos)</li>
 </ul>
 <p><br></p>
 <p><br></p>
